Changed Names with client and server

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,7 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+SocketShim/Chat history.txt
+SocketShim/RP1210Session.log
+SocketShim/RP1210Session.log
+SocketShim/RP1210Session.log
