--- a/SocketShim/shim_cfg.ini
+++ b/SocketShim/shim_cfg.ini
@@ -5,6 +5,7 @@ VDAdriver="DGDPA5MA.dll"
 
 [Network]
 IPAddress="127.0.0.1"
-ReadMessagePort=12352
-SendMessagePort=12354
+ReadMessagePort=12354
+SendMessagePort=12352
+OtherMessagePort=12353
 
