--- a/SocketShim/loggingconfig.json
+++ b/SocketShim/loggingconfig.json
@@ -5,7 +5,7 @@
         "time_format": {
             "class": "logging.Formatter",
             "datefmt": "%Y-%m-%d %H:%M:%S",
-            "format": "%(asctime)s %(message)s"
+            "format": "%(asctime)s.%(msecs)03d' %(message)s"
         },
         "simple": {
             "format": "%(message)s"
