Added Database Connections

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ SocketShim/Chat history.txt
 SocketShim/RP1210Session.log
 SocketShim/RP1210Session.log
 SocketShim/RP1210Session.log
+SocketShim/RP1210Session.log
+RP1210Message.db
+RP1210Session.log
